--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,44 +1,46 @@
-{
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Python Debugger: Current File with Arguments",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
-            "args": [
-                "${command:pickArgs}"
-            ]
-        }
-    ]
-}
-
-
 // {
-//     // A Configuration Code For Vs-Code
+//     // Use IntelliSense to learn about possible attributes.
+//     // Hover to view descriptions of existing attributes.
+//     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 //     "version": "0.2.0",
 //     "configurations": [
-
 //         {
-//         "name": "Python: Odoo17",
-//         "type": "python",
-//         "request": "launch",
-//         "stopOnEntry": false,
-//         "python": "C:\Users\vanty\Downloads\Odoo\.venv\Lib\site-packages", //path of python in your local machine where odoo has installed
-//         "console": "integratedTerminal",
-//         "program": "${workspaceRoot}\\odoo-bin",
-//         "args": [
-//             "--config=${workspaceRoot}\\odoo.conf",
-//         ],
-//         "cwd": "${workspaceRoot}",
-//         "env": {},
-//         "envFile": "${workspaceRoot}/.env",
-//         "debugOptions": [
-//             "RedirectOutput"
-//         ]
-//     }]
+//             "name": "Python Debugger: Current File with Arguments",
+//             "type": "debugpy",
+//             "request": "launch",
+//             "program": "${file}",
+//             "console": "integratedTerminal",
+//             "args": [
+//                 "${command:pickArgs}"
+//             ]
+//         }
+//     ]
 // }
+
+
+{
+    // A Configuration Code For Vs-Code
+    "version": "0.2.0",
+    "configurations": [
+
+        {
+        "name": "Python: Odoo17",
+        "type": "python",
+        "request": "launch",
+        "stopOnEntry": false,
+        "python": "${workspaceFolder}/.venv/Scripts/python", //path of python in your local machine where odoo has installed
+        "console": "integratedTerminal",
+        "program": "${workspaceRoot}\\odoo-bin",
+        "args": [
+            "--config=${workspaceRoot}\\odoo.conf",
+            "--addons-path=addons,C:\\Users\\vanty\\Downloads\\Odoo\\odoo-basic",
+            "-r odoo -w odoo",
+        ],
+        "cwd": "${workspaceRoot}",
+        "env": {},
+        // "envFile": "${workspaceRoot}/.env",
+        "debugOptions": [
+            "RedirectOutput"
+        ]
+    }]
+}
